--- a/src/components/user-profile/profile.scss
+++ b/src/components/user-profile/profile.scss
@@ -502,14 +502,14 @@
 }
 
 .stats-div {
-    width: 30%;
+    width: 35%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
 .scores-div {
-    width: 70%;
+    width: 65%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
